--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                     </ul> -->
                                 </div>
                                 <div class="team-caption">
-                                    <h3 style="color:#FFFFFF;">Prof. Oliver Schneider</h3>
+                                    <h3 style="color:#FFFFFF;">Oliver Schneider</h3>
                                     <p>Assistant Professor <br> University of Waterloo</p>
                                 </div>
                             </div>
@@ -259,7 +259,7 @@
                                                     <h2 class="mb-0">
                                                         <a href="#" class="btn-link collapsed" data-toggle="collapse" data-target="#scheduleC_02" aria-expanded="false" aria-controls="scheduleC_02">
                                                             <span>20 minutes</span>
-                                                            <p><span class="increase-font-size">Talk by Prof. Oliver Schneider</span></p>
+                                                            <p><span class="increase-font-size">Talk by Oliver Schneider</span></p>
                                                         </a>
                                                     </h2>
                                                 </div>
@@ -290,7 +290,7 @@
                                                     <h2 class="mb-0">
                                                         <a href="#" class="btn-link collapsed" data-toggle="collapse" data-target="#scheduleC_04" aria-expanded="false" aria-controls="scheduleC_04">
                                                             <span>20 minutes</span>
-                                                            <p><span class="increase-font-size">Talk by THOMAS MÜLLER</span></p>
+                                                            <p><span class="increase-font-size">Talk by Thomas Müller</span></p>
                                                         </a>
                                                     </h2>
                                                 </div>
