--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         <!-- Section Tittle -->
                         <div class="section-tittle text-center mb-80">
                             <h2>Event Schedule</h2>
-                            <p>The workshop consists of two Guest Talk sessions and follow-up discussion sessions. These
+                            <p>The workshop consists of two guest talks, a hands-on session, and follow-up discussion sessions. These
                                 are tentative schedules to accommodate our speakers and participants.</p>
                         </div>
                     </div>
@@ -395,7 +395,7 @@
                                                     </div>
                                                 </div> -->
                                             </div>
-                                            <div class="card">
+                                            <!-- <div class="card">
                                                 <div class="card-header" id="scheduleH_07">
                                                     <h2 class="mb-0">
                                                         <a href="#" class="btn-link collapsed" data-toggle="collapse"
@@ -415,7 +415,7 @@
                                                         as well as supplementary material for documentation purposes.
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                             <div class="card">
                                                 <div class="card-header" id="scheduleH_08">
                                                     <h2 class="mb-0">
@@ -431,13 +431,13 @@
                                                 <div id="scheduleC_08" class="collapse" aria-labelledby="scheduleH_08"
                                                     data-parent="#accordionSchedule">
                                                     <div class="card-body">
-                                                        There will be three consecutive hands-on sessions (each 25 min)
+                                                        There will be multiple hands-on sessions
                                                         where the groups will design
                                                         tactons collaboratively based on given tasks.
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="card">
+                                            <!-- <div class="card">
                                                 <div class="card-header" id="scheduleH_09">
                                                     <h2 class="mb-0">
                                                         <a href="#" class="btn-link collapsed" data-toggle="collapse"
@@ -448,20 +448,14 @@
                                                         </a>
                                                     </h2>
                                                 </div>
-                                                <!-- <div id="scheduleC_10" class="collapse" aria-labelledby="scheduleH_10" data-parent="#accordionSchedule">
-                                                    <div class="card-body">
-                                                        There will be three consecutive hands-on sessions (each 25 min) where the groups
-                                                        will design tactons collaboratively based on given tasks.
-                                                    </div>
-                                                </div> -->
-                                            </div>
+                                            </div> -->
                                             <div class="card">
                                                 <div class="card-header" id="scheduleH_11">
                                                     <h2 class="mb-0">
                                                         <a href="#" class="btn-link collapsed" data-toggle="collapse"
                                                             data-target="#scheduleC_11" aria-expanded="false"
                                                             aria-controls="scheduleC_11">
-                                                            <span>35 minutes</span>
+                                                            <span>25 minutes</span>
                                                             <p><span class="increase-font-size">Demo and
                                                                     Discussion</span></p>
                                                         </a>
