--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                                                 </div>
                                             </div>
                                             <!-- single-6 -->
-                                            <div class="card">
+                                            <!-- <div class="card">
                                                 <div class="card-header" id="scheduleH_06">
                                                     <h2 class="mb-0">
                                                         <a href="#" class="btn-link collapsed" data-toggle="collapse"
@@ -388,13 +388,7 @@
                                                         </a>
                                                     </h2>
                                                 </div>
-                                                <!-- <div id="scheduleC_07" class="collapse" aria-labelledby="scheduleH_07" data-parent="#accordionSchedule">
-                                                    <div class="card-body">
-                                                        Thomas will cover design processes in industry and toolkits for tactile rapid-prototyping,
-                                                        offering valuable insights for haptic design professionals and enthusiasts alike.
-                                                    </div>
-                                                </div> -->
-                                            </div>
+                                            </div> -->
                                             <!-- <div class="card">
                                                 <div class="card-header" id="scheduleH_07">
                                                     <h2 class="mb-0">
